--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
     <script>
         // لیست فایل ها با نام های فارسی
         const files = [
-            { name: "محاسبه تغییرات کمپرس توسط نسبت تراکم", file: "compress change by cr.html" },
-            { name: "محاسبه تغییرات نسبت تراکم توسط کمپرس", file: "cr change by compress.html" },
             { name: "محاسبه تغییرات نسبت تراکم توسط کفتراشی", file: "cr change by trim v2.html" },
+            { name: "محاسبه تغییرات نسبت تراکم توسط کمپرس", file: "cr change by compress.html" },
+            { name: "محاسبه تغییرات کمپرس توسط نسبت تراکم", file: "compress change by cr.html" },
+            { name: "محاسبه کفتراشی مورد نیاز", file: "required trim.html" },
             { name: "محاسبات گیربکس", file: "gearbox calculation.html" },
-            { name: "محاسبه کفتراشی مورد نیاز", file: "required trim.html" }
+            { name: "ماشین حساب", file: "calc.html" }
         ];
 
         // دریافت لیست فایل ها
