--- a/calc.html
+++ b/calc.html
@@ -135,7 +135,7 @@
         }
 
         .constant {
-            background-color: #1abc9c;
+            background-color: #3498db;
             color: white;
         }
 
@@ -162,8 +162,8 @@
         <div class="result-display" id="result">0</div>
     </div>
     <div class="buttons">
-        <button class="clear" onclick="clearAll()">C</button>
         <button class="delete" onclick="deleteLastChar()">⌫</button>
+        <button class="clear" onclick="clearAll()">C</button>
         <button class="function" onclick="addToCalculation('(')">)</button>
         <button class="operator" onclick="addToCalculation('/')">/</button>
 
