--- a/calc.html
+++ b/calc.html
@@ -164,12 +164,12 @@
     <div class="buttons">
         <button class="delete" onclick="deleteLastChar()">⌫</button>
         <button class="clear" onclick="clearAll()">C</button>
-        <button class="function" onclick="addToCalculation('(')">)</button>
+        <button class="operator" onclick="addToCalculation('(')">)</button>
         <button class="operator" onclick="addToCalculation('/')">/</button>
 
         <button class="constant" onclick="addConstant('π')">π</button>
         <button class="constant" onclick="addConstant('e')">e</button>
-        <button class="function" onclick="addToCalculation(')')">(</button>
+        <button class="operator" onclick="addToCalculation(')')">(</button>
         <button class="operator" onclick="addToCalculation('-')">-</button>
 
         <button onclick="addToCalculation('9')">9</button>
