--- a/index.html
+++ b/index.html
@@ -117,6 +117,35 @@
     </div>
 
     <script>
+        // تابع برای بارگذاری و اضافه کردن هدر
+function loadHeader() {
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => {
+            document.body.insertAdjacentHTML('afterbegin', data);
+        })
+        .catch(error => {
+            console.error('Error loading header:', error);
+        });
+}
+
+// تابع برای بارگذاری و اضافه کردن فوتر
+function loadFooter() {
+    fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.body.insertAdjacentHTML('beforeend', data);
+        })
+        .catch(error => {
+            console.error('Error loading footer:', error);
+        });
+}
+
+// بارگذاری هدر و فوتر هنگام لود صفحه
+document.addEventListener('DOMContentLoaded', function() {
+    loadHeader();
+    loadFooter();
+});
         // لیست فایل ها با نام های فارسی
         const files = [
             { name: "محاسبه تغییرات نسبت تراکم توسط کفتراشی", file: "cr change by trim v2.html" },
@@ -158,24 +187,6 @@ function loadHeader() {
             console.error('Error loading header:', error);
         });
 }
-
-// تابع برای بارگذاری و اضافه کردن فوتر
-function loadFooter() {
-    fetch('footer.html')
-        .then(response => response.text())
-        .then(data => {
-            document.body.insertAdjacentHTML('beforeend', data);
-        })
-        .catch(error => {
-            console.error('Error loading footer:', error);
-        });
-}
-
-// بارگذاری هدر و فوتر هنگام لود صفحه
-document.addEventListener('DOMContentLoaded', function() {
-    loadHeader();
-    loadFooter();
-});
     </script>
 </body>
 </html>
