Update compress change by cr.html

--- a/compress change by cr.html
+++ b/compress change by cr.html
@@ -169,7 +169,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>محاسبه فشار تراکم جدید</h1>
+        <h1>محاسبه کمپرس جدید</h1>
         <div class="subtitle">محاسبات تخصصی تنظیم موتور</div>
     </header>
 
