--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
     <script>
         // لیست فایل ها با نام های فارسی
         const files = [
+            { name: "محاسبه تغییرات نسبت تراکم توسط کمپرس و برعکس", file: "CR Pressure Calculator.html" },
             { name: "محاسبه تغییرات نسبت تراکم توسط کفتراشی", file: "cr change by trim v2.html" },
-            { name: "محاسبه تغییرات نسبت تراکم توسط کمپرس", file: "cr change by compress.html" },
-            { name: "محاسبه تغییرات کمپرس توسط نسبت تراکم", file: "compress change by cr.html" },
             { name: "محاسبه کفتراشی مورد نیاز", file: "required trim.html" },
             { name: "محاسبات گیربکس", file: "gearbox calculation.html" },
             { name: "ماشین حساب", file: "calc.html" }
