--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
             { name: "محاسبه تغییرات نسبت تراکم توسط کمپرس و برعکس", file: "CR Pressure Calculator.html" },
             { name: "محاسبه تغییرات نسبت تراکم توسط کفتراشی", file: "cr change by trim v2.html" },
             { name: "محاسبه کفتراشی مورد نیاز", file: "required trim.html" },
+            { name: "تبدیل توان و گشتاور", file: "hp calc.html" },
             { name: "محاسبات گیربکس", file: "gearbox calculation.html" },
+            { name: "محاسبات نایر", file: "tire calc.html" },
             { name: "ماشین حساب", file: "calc.html" }
         ];
 
