--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             { name: "محاسبه کفتراشی مورد نیاز", file: "required trim.html" },
             { name: "تبدیل توان و گشتاور", file: "hp calc.html" },
             { name: "محاسبات گیربکس", file: "gearbox calculation.html" },
-            { name: "محاسبات نایر", file: "tire calc.html" },
+            { name: "محاسبات تایر", file: "tire calc.html" },
             { name: "ماشین حساب", file: "calc.html" }
         ];
 
