--- a/calc.html
+++ b/calc.html
@@ -168,7 +168,7 @@
 <body>
 <div class="calculator">
     <header>
-        <h2>ماشین حساب مهندسی</h2>
+        <h2>ماشین حساب</h2>
     </header>
     <div class="display">
         <div class="calculation-display" id="calculation"></div>
