--- a/tire calc.html
+++ b/tire calc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محاسبه ابعاد تایر | ماشین حساب سهند</title>
+    <title>محاسبه ابعاد تایر</title>
     <style>
         :root {
             --primary-color: #4b6cb7;
@@ -174,7 +174,7 @@
 <div class="container">
     <header>
         <h1>محاسبه ابعاد تایر</h1>
-        <div class="subtitle">ماشین حساب تخصصی خودرو | سهند</div>
+        <div class="subtitle">محاسبات تخصصی</div>
     </header>
 
     <div class="content">
