--- a/hp calc.html
+++ b/hp calc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مبدل هوشمند اسب بخار و گشتاور | ماشین حساب سهند</title>
+    <title>مبدل هوشمند اسب بخار و گشتاور</title>
     <style>
         :root {
             --primary-color: #4b6cb7;
@@ -239,7 +239,7 @@
 <div class="container">
     <header>
         <h1>مبدل هوشمند اسب بخار و گشتاور</h1>
-        <div class="subtitle">ماشین حساب تخصصی خودرو | سهند</div>
+        <div class="subtitle">محاسبات تخصصی تنظیم موتور</div>
     </header>
 
     <div class="content">
