--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
             <li><a href="pricing.html"><i class="fas fa-tags"></i> نرخ‌نامه</a></li>
             <li><a href="index.html" class="active"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
-            <li><a href="contact.html"><i class="fas fa-phone-alt"></i> تماس با ما</a></li>
+            <li><a href="faq.html"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
         </ul>
     </nav>
 </header>
