--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سوالات متداول | ریمپ سهند</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="icon.png" type="image/png">
     <style>
         :root {
             --primary-blue: #4b6cb7;
@@ -462,7 +463,7 @@
     <!-- آیتم‌های سوالات -->
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1560958089-b8a1929cea89?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="ریمپ ایسیو">
+            <img src="remap.jpeg" alt="ریمپ ایسیو">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-question-circle faq-icon"></i> ریمپ چیه؟</h2>
@@ -474,7 +475,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1557529141-14e6b01a2787?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="آسیب ریمپ">
+            <img src="blown.jpg" alt="آسیب ریمپ">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-exclamation-triangle faq-icon"></i> آیا ریمپ به ایسیو یا موتور آسیب می‌زنه؟</h2>
@@ -486,7 +487,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="کارخانه">
+            <img src="factory.jpg" alt="کارخانه">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-industry faq-icon"></i> چرا کارخونه خودش ریمپ نمی‌کنه؟</h2>
@@ -498,7 +499,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1601362840469-51e4d8d58785?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="گارانتی">
+            <img src="garantie.jpg" alt="گارانتی">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-shield-alt faq-icon"></i> آیا ریمپ گارانتی رو باطل می‌کنه؟</h2>
@@ -510,7 +511,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="ضرورت ریمپ">
+            <img src="vajeb.jpg" alt="ضرورت ریمپ">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-car faq-icon"></i> ریمپ برای چه کسانی واجب هست؟</h2>
@@ -524,7 +525,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="مشکلات ریمپ">
+            <img src="check.jpg" alt="مشکلات ریمپ">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-tools faq-icon"></i> با ریمپ چه مشکلاتی حل میشه؟</h2>
@@ -536,7 +537,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="رضایت">
+            <img src="narazi.jpg" alt="رضایت">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-smile faq-icon"></i> اگه از ریمپ راضی نبودم، چی کار کنم؟</h2>
@@ -548,7 +549,21 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1517677208171-0bc6725a3e60?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="ناک">
+            <img src="wide.jpg" alt="وایدبند">
+        </div>
+        <div class="faq-content">
+            <h2 class="faq-question"><i class="fas fa-smile faq-icon"></i> وایدبند چیست؟</h2>
+            <p class="faq-answer">
+                وایدبند یک سنسور برای اندازه‌گیری نسبت هوا به سوخت (AFR) در خودروهاست. برخلاف سنسورهای معمولی اکسیژن (ناروبند) که تنها قادر به تشخیص رقیق یا غنی بودن مخلوط سوخت و هوا هستند، وایدبند می‌تواند مقدار دقیق این نسبت را در لحظه نمایش دهد. استفاده از وایدبند به ما این امکان را می‌دهد که مصرف سوخت را در حین حرکت به‌صورت دقیق تنظیم کنیم؛ به‌گونه‌ای که هم مصرف سوخت پایین بماند و هم شتاب خودرو افزایش یابد.
+                نسبت ایده‌آل هوا به سوخت برای هر خودرو حتی با مدل یکسان می‌تواند متفاوت باشد. بنابراین ریمپی که بدون استفاده از سنسور وایدبند انجام شود، کارایی ندارد.
+                تمامی ریمپ‌های انجام‌شده در ریمپ سهند با استفاده از سنسور وایدبند و با هدف دستیابی به بهترین عملکرد خودرو صورت می‌گیرند.
+            </p>
+        </div>
+    </div>
+
+    <div class="faq-item">
+        <div class="faq-image">
+            <img src="preig.webp" alt="ناک">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-fire faq-icon"></i> صدای ناک چیه و چرا برای موتور خطرناکه؟</h2>
@@ -566,7 +581,7 @@
 
     <div class="faq-item">
         <div class="faq-image">
-            <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1280&q=80" alt="ایسیو">
+            <img src="ecu.jpg" alt="ایسیو">
         </div>
         <div class="faq-content">
             <h2 class="faq-question"><i class="fas fa-microchip faq-icon"></i> ایسیو چیه و چیکار میکنه؟</h2>
@@ -575,6 +590,19 @@
             </p>
         </div>
     </div>
+
+    <div class="faq-item">
+    <div class="faq-image">
+        <img src="dyno.webp" alt="داینو">
+    </div>
+    <div class="faq-content">
+        <h2 class="faq-question"><i class="fas fa-microchip faq-icon"></i> داینو چیست؟</h2>
+        <p class="faq-answer">
+            داینو یک دستگاه اندازه‌گیری قدرت و گشتاور موتور خودرو است که عملکرد واقعی خودرو را در شرایط مختلف شبیه‌سازی و ثبت می‌کند. با استفاده از داینو می‌توان فهمید که موتور دقیقاً چه مقدار توان و گشتاور در چه دوری تولید می‌کند و تغییرات ناشی از ریمپ یا تیونینگ چقدر موثر بوده‌اند. داینو همچنین یک مجموعه کامل هست شامل سنسور AFR و بسیاری از سنسور های دیگه هست.
+        </p>
+    </div>
+</div>
+
 </div>
 
 <footer>
