--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>هدر اختصاصی</title>
+    <link rel="icon" href="icon.png" type="image/png">
     <style>
         :root {
             --primary-color: #4b6cb7;
