--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نرخ‌نامه خدمات | ریمپ سهند</title>
+    <title>خدمات ریمپ خدمات | ریمپ سهند</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="icon.png" type="image/png">
     <style>
@@ -292,6 +292,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
             border-radius: 8px;
             overflow: hidden;
+            direction: rtl;
         }
 
         .pricing-table th {
@@ -300,12 +301,19 @@
             padding: 1rem;
             text-align: right;
             font-weight: 600;
+            white-space: nowrap;
         }
 
         .pricing-table td {
             padding: 1rem;
             border-bottom: 1px solid var(--border-gray);
             text-align: right;
+            vertical-align: middle;
+        }
+
+        .pricing-table tr {
+            cursor: pointer;
+            transition: all 0.3s ease;
         }
 
         .pricing-table tr:nth-child(even) {
@@ -318,17 +326,43 @@
 
         .pricing-table tr:hover {
             background-color: rgba(75, 108, 183, 0.1);
+            transform: translateY(-2px);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .pricing-table tr:active {
+            transform: translateY(0);
+            background-color: rgba(75, 108, 183, 0.15);
         }
 
         .price {
             font-weight: 700;
             color: var(--dark-blue);
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 0.5rem;
         }
 
         .price::after {
-            content: ' تومان';
+            content: 'تومان';
             font-weight: normal;
             font-size: 0.9em;
+            color: var(--medium-gray);
+        }
+
+        .price::before {
+            content: '→';
+            position: absolute;
+            left: -20px;
+            opacity: 0;
+            transition: all 0.3s ease;
+        }
+
+        .pricing-table tr:hover .price::before {
+            opacity: 1;
+            left: -15px;
         }
 
         .note {
@@ -404,72 +438,91 @@
 
         /* رسپانسیو */
         @media (max-width: 768px) {
-            .pricing-header h1 {
-                font-size: 1.8rem;
+            .pricing-table {
+                display: block;
+                box-shadow: none;
+                border-radius: 0;
             }
 
-            .pricing-header p {
-                font-size: 1rem;
+            .pricing-table thead {
+                display: none;
             }
 
-            .container {
-                width: 95%;
-                margin: 20px auto;
+            .pricing-table tbody {
+                display: block;
             }
 
-            .pricing-table th,
+            .pricing-table tr {
+                display: block;
+                margin-bottom: 1rem;
+                border: 1px solid var(--border-gray);
+                border-radius: 8px;
+                padding: 1rem;
+                background-color: white;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+                transition: all 0.3s ease;
+            }
+
+            .pricing-table tr:hover {
+                transform: translateY(-3px);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            }
+
             .pricing-table td {
-                padding: 0.75rem 0.5rem;
-                font-size: 0.9rem;
+                display: block;
+                text-align: right;
+                padding: 0.75rem 0;
+                border: none;
+                position: relative;
+            }
+
+            .pricing-table td:not(:last-child) {
+                border-bottom: 1px solid var(--border-gray);
+            }
+
+            .pricing-table td::before {
+                content: attr(data-label);
+                font-weight: 600;
+                color: var(--dark-blue);
+                display: inline-block;
+                min-width: 120px;
+                margin-left: 1rem;
+            }
+
+            .price {
+                justify-content: space-between;
+                padding-top: 1rem;
+                margin-top: 0.5rem;
+                border-top: 1px solid var(--border-gray);
+            }
+
+            .price::before {
+                display: none;
+            }
+
+            .price::after {
+                font-size: 0.8em;
+                color: var(--medium-gray);
+            }
+
+            .pricing-table tr:nth-child(even) {
+                background-color: white;
             }
         }
 
         @media (max-width: 480px) {
-            .pricing-table {
-                display: block;
-                width: 100%;
-                overflow-x: visible;
-                white-space: normal;
-            }
-
-            .pricing-table thead,
-            .pricing-table tbody,
-            .pricing-table tr,
-            .pricing-table th,
-            .pricing-table td {
-                display: block;
-                width: 100%;
-            }
-
-            .pricing-table tr {
-                margin-bottom: 1rem;
-                border: 1px solid var(--border-gray);
-                border-radius: 8px;
-                overflow: hidden;
-            }
-
-            .pricing-table th {
-                background-color: var(--primary-blue);
-                color: white;
-                text-align: center;
+            .pricing-table td::before {
+                min-width: 100px;
+                font-size: 0.9em;
             }
 
             .pricing-table td {
-                text-align: right;
-                padding: 0.5rem 1rem;
-                border-bottom: 1px solid var(--border-gray);
+                font-size: 0.9em;
+                padding: 0.5rem 0;
             }
 
-            .pricing-table td:before {
-                content: attr(data-label);
-                font-weight: bold;
-                display: inline-block;
-                width: 50%;
-                text-align: left;
-            }
-
-            .pricing-table tr:nth-child(even) {
-                background-color: var(--light-gray);
+            .price {
+                font-size: 1.1em;
             }
         }
     </style>
@@ -493,7 +546,7 @@
         <ul class="nav-links">
             <li><a href="main.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
             <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
-            <li><a href="pricing.html" class="active"><i class="fas fa-tags"></i> نرخ‌نامه</a></li>
+            <li><a href="pricing.html" class="active"><i class="fas fa-tags"></i> خدمات ریمپ</a></li>
             <li><a href="index.html"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
             <li><a href="faq.html"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
         </ul>
@@ -503,7 +556,7 @@
 <!-- محتوای اصلی -->
 <div class="container">
     <section class="pricing-header">
-        <h1>نرخ‌نامه خدمات ریمپ سهند</h1>
+        <h1>خدمات ریمپ خدمات ریمپ سهند</h1>
         <p>قیمت‌های به‌روز و رقابتی خدمات ریمپ ایسیو و تیونینگ خودرو</p>
     </section>
 
@@ -521,57 +574,57 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/702995'">
                 <td data-label="خانواده خودرو">M13</td>
                 <td data-label="مدل‌ها">پراید ۱۱۱، ۱۳۱، ۱۳۲، ۱۴۱، ۱۵۱</td>
                 <td data-label="قیمت (تومان)" class="price">۱,۴۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/702996'">
                 <td data-label="خانواده خودرو">M15</td>
                 <td data-label="مدل‌ها">تیبا، ساینا، کوییک، اطلس، سهند</td>
                 <td data-label="قیمت (تومان)" class="price">۱,۸۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/702998'">
                 <td data-label="خانواده خودرو">M15T</td>
                 <td data-label="مدل‌ها">شاهین</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703000'">
                 <td data-label="خانواده خودرو">XU7</td>
                 <td data-label="مدل‌ها">پرشیا، آریسان، ۴۰۵، سورن، سمند</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۰۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703002'">
                 <td data-label="خانواده خودرو">TU3</td>
                 <td data-label="مدل‌ها">پژو ۲۰۶، ۲۰۷</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۰۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703004'">
                 <td data-label="خانواده خودرو">TU5</td>
                 <td data-label="مدل‌ها">پرشیا، شاهین، سمند، رانا، تارا، ۲۰۶، ۲۰۷، ۴۰۵</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703005'">
                 <td data-label="خانواده خودرو">EF7</td>
                 <td data-label="مدل‌ها">سمند، سورن، دنا</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۵۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خانواده خودرو">EF7T</td>
                 <td data-label="مدل‌ها">ری‌را، دنا توربو، سورن توربو</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۸۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703007'">
                 <td data-label="خانواده خودرو">K4M</td>
                 <td data-label="مدل‌ها">تندر ۹۰</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۵۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703010'">
                 <td data-label="خانواده خودرو">چینی تنفس طبیعی</td>
                 <td data-label="مدل‌ها">خودروهای چینی با موتور تنفس طبیعی</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۵۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/706630'">
                 <td data-label="خانواده خودرو">چینی توربو</td>
                 <td data-label="مدل‌ها">خودروهای چینی با موتور توربوشارژ</td>
                 <td data-label="قیمت (تومان)" class="price">۲,۸۰۰,۰۰۰</td>
@@ -594,37 +647,37 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">حذف تأخیر پدال گاز</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۴۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">کاتاف رگباری</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">آپدیت و بازنشانی</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">حذف خطای کاذب</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">دیاگ، عیب‌یابی و حذف خطا</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">اصلاح ایرادات نرم‌افزاری</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
             </tr>
-            <tr>
+            <tr onclick="window.location.href='https://zarinp.al/703006'">
                 <td data-label="خدمات">اصلاح دمای آب</td>
                 <td data-label="مدلها">تمام مدل‌ها</td>
                 <td data-label="قیمت (تومان)" class="price">۲۰۰,۰۰۰</td>
@@ -641,7 +694,7 @@
     <footer>
         <div class="footer-links">
             <a href="services.html">خدمات ما</a>
-            <a href="pricing.html">نرخ‌نامه</a>
+            <a href="pricing.html">خدمات ریمپ</a>
             <a href="calculator.html">ماشین حساب</a>
             <a href="contact.html">تماس با ما</a>
         </div>
